@@ -3,18 +3,18 @@ Hash: SHA512
 
 DIST notmuch-0.6.1.tar.gz 388182 RMD160 c1c46e03c34f63629071269413bc74bf9b669506 SHA1 ea18d618499d0dd03fdb0defaddaf263e1e5c312 SHA256 e2d02a24e5b3200ee2e16c0dd27dff1913d9ec76e0ee352d1e7e92eb6e4d5ef5
 DIST notmuch-0.7.tar.gz 389830 RMD160 ae55134588c7435074ce6d73dcb151bee2447845 SHA1 a16bf6dfbce78a62b004ce9f983c1b3a4951c733 SHA256 0548310551b5e0da2eb366e1683e4b81b25b774d5ab4c5117091a67653646ec8
-EBUILD notmuch-0.6.1-r1.ebuild 4751 RMD160 069177c26b9f1ca158e3eef529e35a0fda626ca9 SHA1 72786446d4c9cba06b95900d3035792389982c73 SHA256 3894ab3097a3af7167b7506086874f00cf4994616fb065050d2dccc9acf0723c
+EBUILD notmuch-0.6.1-r1.ebuild 4665 RMD160 5ac2bb05bb130453690752472103aa19d4ec1f95 SHA1 b8e329e6ec0af697d7fb655f0f211b12169e61d6 SHA256 197f92d4f426d312234021c6f50b171cc785567e9ff6c3003d3386e30e2af5c9
 EBUILD notmuch-0.6.1.ebuild 4775 RMD160 555f4d80bdd7900df6b3d69e02f304594ff43055 SHA1 da45cc7531c4de4fd817bafe626a869fc965253e SHA256 b08fced9d7dadfca2971ade522a18c4b95b71967f60aba70d46573a9bef52eac
-EBUILD notmuch-0.7-r1.ebuild 4751 RMD160 069177c26b9f1ca158e3eef529e35a0fda626ca9 SHA1 72786446d4c9cba06b95900d3035792389982c73 SHA256 3894ab3097a3af7167b7506086874f00cf4994616fb065050d2dccc9acf0723c
+EBUILD notmuch-0.7-r1.ebuild 4665 RMD160 5ac2bb05bb130453690752472103aa19d4ec1f95 SHA1 b8e329e6ec0af697d7fb655f0f211b12169e61d6 SHA256 197f92d4f426d312234021c6f50b171cc785567e9ff6c3003d3386e30e2af5c9
 EBUILD notmuch-0.7.ebuild 4777 RMD160 1dbc5562b43dd2e87c1620444d132ac374a130fd SHA1 ba9290258d5485c0046653d1cacf9ba06fcac4fd SHA256 e15bc43f8a819aec1c3caee00a3e13b8e2a2a79fe84bb68ec98edf97c2b9a8d5
-EBUILD notmuch-9999.ebuild 4740 RMD160 6a30754e4dc608246c61cd40bada3b34406f6ecc SHA1 7d8c96058d4bfdcf3982ee4683f375ced3050ebd SHA256 084f44836672c0041561527b9b3719fe03e050933903910f2bbfc3ed09104cf3
-MISC ChangeLog 6520 RMD160 f28ff9f48e225ec66337d6b1a458584602659995 SHA1 f70e28147c823de8833a5cf6aeefe8b53aa3e016 SHA256 1b2006e341f87e62eae875096bca16cc4194a447dc6c0dd0003d6ab9364ffad4
+EBUILD notmuch-9999.ebuild 4654 RMD160 89a8987bdd64880987218e9e185d35ba4d3d2399 SHA1 d14d7dfc43bd3c1031c308f48210eb88efdbf93c SHA256 78286f65b3dd70c106b7662e65aa9d23cc39f1b39e5eaac61f2cc8a21d7e28ee
+MISC ChangeLog 6682 RMD160 08f580eefa4c7c648c4a0f01360e2b25613f0acd SHA1 c6646447675e6119d683297705475effdaa3ff17 SHA256 bddc9bb486db44fb7fc463d9571935e8bb0125ea5328ea04d0b8ea95a5dc36b8
 MISC metadata.xml 897 RMD160 436f9558ab188a98a79dee2b25afba0ce4660f97 SHA1 f31467190638f4b59034c19c855c798b919143f4 SHA256 9408059d62680198c500a7e4727352f9195602f4550fbd25e1962b3b953c74d7
 MISC watch 50 RMD160 df9c217f719a593b336c5befd696b069f6324b5c SHA1 841d4f323cd4229ed287b8ae7078cb6b410226a0 SHA256 9179b7c39d6a0632841b32d25e21f2bd9eb7d2596b4dad08fba6415b7a9b9540
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk5rNTkACgkQzJrj3cAXR0lkGgCfYNqERMOYTxkncJsw1vPzKlxT
-BYMAn1ggtHfJj7hZj0eFBZjyp0DaRRJ4
-=mtzI
+iEYEAREKAAYFAk5rNtUACgkQzJrj3cAXR0mxrwCfTVpLrqUyE4ACLKnJBA9LbhFo
+NGcAnjXvEnvB8VoesI2IpcZU0fhxwWsT
+=apjZ
 -----END PGP SIGNATURE-----
